--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,31 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+---
+import LandingHeader from '@/components/landing-header.astro'
+interface Props {
+  title: string
+}
 
+const { title } = Astro.props
+---
+
+<!doctype html>
+<html lang='en' class='dark'>
+  <head>
+    <meta charset='UTF-8' />
+    <meta name='description' content='Astro description' />
+    <meta name='viewport' content='width=device-width' />
+    <link rel='icon' type='image/icon' href='/favicon.ico' />
+    <meta name='generator' content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body>
+    <LandingHeader />
+		<main class='snap-y snap-mandatory relative h-screen overflow-auto'>
+			<slot />
+    </main>
+  </body>
+</html>
+
+<style is:global>
 .gutter {
   scrollbar-gutter: stable;
 }
@@ -105,3 +129,4 @@
   font-weight: 700;
   font-style: normal;
 }
+</style>
