add animations to tailwind, meta tags and atropos

--- a/src/components/landing-header.astro
+++ b/src/components/landing-header.astro
@@ -5,7 +5,7 @@ import { Logo } from '@/components/icon'
 
 <header
   id='landing-header'
-  class='flex items-center justify-between fixed top-0 w-full p-2 mb-3 z-10 max-[420px]:p-0'
+  class='landing-header flex items-center justify-between fixed top-0 w-full p-2 mb-3 z-10 max-[420px]:p-0'
 >
   <div class='flex flex-grow basis-0'>
     <Logo className='h-5 text-current hover:text-blue-500' />
