--- a/src/components/page/components/role.astro
+++ b/src/components/page/components/role.astro
@@ -8,7 +8,7 @@ const { name, color } = Astro.props
 ---
 
 <div
-  class='bg-zinc-700/70 flex flex-row items-center align-baseline gap-2 py-1 px-2 rounded-md hover:bg-zinc-700/100 scale-up-top'
+  class='bg-zinc-700/70 flex flex-row items-center align-baseline gap-2 py-1 px-2 rounded-md hover:bg-zinc-700/100 animate-scale-up-top'
 >
   <span
     class:list={{
