--- a/src/components/page/profile.astro
+++ b/src/components/page/profile.astro
@@ -8,8 +8,7 @@ import  { ProfileTab }  from './components/profile-tab'
   class='flex sm gap-5 items-start min-[420px]:mt-4 [&>section]:flex-col [&>section>h2]:font-bold [&>section>h2]:my-4 [&>section]:max-sm:w-full '
 >
   <section class='w-1/2 flex max-sm:hidden'>
-    <h2 class='text-3xl type-blinking'>Angel <span class='text-blue-500'>Gabriel</span> Lopez
-    </h2>
+    <h2 class='text-3xl type-blinking'>Angel <span class='text-blue-500'>Gabriel </span>Lopez<span class='text-blue-500'>.</span></h2>
     <p class='text-lg'>
       <span class='text-blue-500'>Software Engineer</span> and{' '}
       <span class='text-blue-500'>polyglot developer</span> with +2 years of
@@ -29,9 +28,12 @@ import  { ProfileTab }  from './components/profile-tab'
       <ProfileTab client:visible/>
     </section>
   </section>
-  <section class='w-1/2 flex h-full px-8'>
+  <section class='w-1/2 flex h-full px-5 max-sm:hidden'>
     <Atorpos>
       <DiscordCard />
     </Atorpos>
+  </section>
+  <section class='w-1/2 flex h-full sm:hidden'>
+    <DiscordCard />
   </section>
 </section>
