--- a/src/components/page/profile.astro
+++ b/src/components/page/profile.astro
@@ -1,5 +1,5 @@
 ---
-import Atorpos from './components/atropos-wrapper.astro';
+import AtorposWrapper from './components/atropos-wrapper.astro';
 import  DiscordCard  from './components/discord.astro'
 import  { ProfileTab }  from './components/profile-tab'
 ---
@@ -8,7 +8,7 @@ import  { ProfileTab }  from './components/profile-tab'
   class='flex sm gap-5 items-start min-[420px]:mt-4 [&>section]:flex-col [&>section>h2]:font-bold [&>section>h2]:my-4 [&>section]:max-sm:w-full '
 >
   <section class='w-1/2 flex max-sm:hidden'>
-    <h2 class='text-3xl type-blinking'>Angel <span class='text-blue-500'>Gabriel </span>Lopez<span class='text-blue-500'>.</span></h2>
+    <h2 class='text-3xl animate-typing type-blinking'>Angel <span class='text-blue-500'>Gabriel </span>Lopez<span class='text-blue-500'>.</span></h2>
     <p class='text-lg'>
       <span class='text-blue-500'>Software Engineer</span> and{' '}
       <span class='text-blue-500'>polyglot developer</span> with +2 years of
@@ -29,9 +29,9 @@ import  { ProfileTab }  from './components/profile-tab'
     </section>
   </section>
   <section class='w-1/2 flex h-full px-5 max-sm:hidden'>
-    <Atorpos>
+    <AtorposWrapper>
       <DiscordCard />
-    </Atorpos>
+    </AtorposWrapper>
   </section>
   <section class='w-1/2 flex h-full sm:hidden'>
     <DiscordCard />
