fix some bugs and upgrade the performance

--- a/src/components/page/components/atropos-wrapper.astro
+++ b/src/components/page/components/atropos-wrapper.astro
@@ -3,8 +3,11 @@ import Atropos from 'atropos/react'
 import 'atropos/atropos.css'
 ---
 
-<Atropos className='rounded-2xl' client:idle 
-  activeOffset={40}
-  shadowScale={1.05}>
+<Atropos className='rounded-2xl' client:idle
+  rotateTouch={false}
+  rotateXMax={7}
+  rotateYMax={7}
+  shadow={false}
+  highlight={false}>
     <slot />
 </Atropos>
