--- a/src/components/landing-header.astro
+++ b/src/components/landing-header.astro
@@ -5,7 +5,7 @@ import { Logo } from '@/components/icon'
 
 <header
   id='landing-header'
-  class='landing-header flex items-center justify-between fixed top-0 w-full p-2 mb-3 z-10 max-[420px]:p-0'
+  class='landing-header p-2 flex z-40 w-full h-auto items-center  sticky top-0 inset-x-0 backdrop-blur-lg  backdrop-saturate-150 bg-background/70 px-0 justify-between'
 >
   <div class='flex flex-grow basis-0'>
     <Logo className='h-5 text-current hover:text-blue-500' />
