--- a/src/components/page/project.astro
+++ b/src/components/page/project.astro
@@ -5,8 +5,8 @@ import { PROJECTS } from '@/constants'
 
 <section class='flex flex-col p-3'>
   <h1 class='mb-3 text-3xl font-bold text-center'>
-    <span class='text-blue-500 text-4xl rounded-2xl'>P</span>rojects
-    <span class='text-blue-500 text-4xl rounded-2xl'>.</span>
+    <span class='text-lime-400 text-4xl rounded-2xl'>P</span>rojects
+    <span class='text-lime-400 text-4xl rounded-2xl'>.</span>
   </h1>
   <div
     class='grid grid-cols-[repeat(auto-fit,minmax(22rem,1fr))] gap-2 max-w-full'
