--- a/src/components/landing-header.astro
+++ b/src/components/landing-header.astro
@@ -8,16 +8,16 @@ import { Logo } from '@/components/icon'
   class='landing-header p-2 flex z-40 w-full h-auto items-center  sticky top-0 inset-x-0 backdrop-blur-lg  backdrop-saturate-150 bg-background/70 px-0 justify-between'
 >
   <div class='flex flex-grow basis-0'>
-    <Logo className='h-5 text-current hover:text-blue-500' />
+    <Logo className='h-5 text-current hover:text-lime-500' />
   </div>
   <nav class='flex flex-grow justify-start'>
     <ul
       class='flex text-sm [&>li>a]:font-medium [&>li>a]:text-current [&>li>a]:inline-block [&>li>a]:px-4 [&>li>a]:py-2'
     >
-      <li class='text-current hover:text-blue-400'>
+      <li class='text-current hover:text-lime-400'>
         <Link href='#Home'>Home</Link>
       </li>
-      <li class='text-current hover:text-blue-400'>
+      <li class='text-current hover:text-lime-400'>
         <Link href='#Projects'>Projects</Link>
       </li>
     </ul>
