--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ const { title } = Astro.props
   </head>
   <body>
     <LandingHeader />
-		<main class='lg:px-[18rem] px-4 w-full flex flex-col gap-5'>
+		<main class='lg:px-[18rem] px-4 w-full flex flex-col gap-5 mt-3'>
 			<slot />
     </main>
   </body>
