--- a/src/components/page/components/discord.astro
+++ b/src/components/page/components/discord.astro
@@ -28,7 +28,7 @@ import  MatrixBackground  from './matrix-bg.astro'
     <section class='flex justify-end mb-2'>
       <span></span>
       <div class='flex rounded-lg bg-black p-1'>
-        <Badged client:visible />
+        <Badged client:load />
       </div>
     </section>
     <main
@@ -63,7 +63,7 @@ import  MatrixBackground  from './matrix-bg.astro'
         <div class='[&>span]: flex flex-col'>
           <span class='text-sm font-bold my-1'>CONTACT</span>
           <div class='flex flex-row gap-2'>
-            <Icons client:visible />
+            <Icons client:load />
           </div>
         </div>
         <div class='flex flex-col'>
