--- a/src/components/page/components/discord.astro
+++ b/src/components/page/components/discord.astro
@@ -28,14 +28,14 @@ import  MatrixBackground  from './matrix-bg.astro'
     <section class='flex justify-end mb-2'>
       <span></span>
       <div class='flex rounded-lg bg-black p-1'>
-        <Badged client:load />
+        <Badged client:idle />
       </div>
     </section>
     <main
       class='flex flex-col gap-2 bg-black rounded-lg p-3 divide-y-2 divide-[#2e2f34]'
     >
       <section class='flex flex-col h-full'>
-        <h2 class='text-2xl font-bold animate-typing type-blinking'>
+        <h2 class='text-2xl font-bold type-blinking animate-blink-caret'>
           Angel <span class='text-lime-400'>Gabriel </span>Lopez<span
             class='text-lime-400'>.</span>
         </h2>
@@ -63,7 +63,7 @@ import  MatrixBackground  from './matrix-bg.astro'
         <div class='[&>span]: flex flex-col'>
           <span class='text-sm font-bold my-1'>CONTACT</span>
           <div class='flex flex-row gap-2'>
-            <Icons client:load />
+            <Icons client:idle />
           </div>
         </div>
         <div class='flex flex-col'>
