--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,9 +28,9 @@ const { title } = Astro.props
   </head>
   <body>
     <LandingHeader />
-		<main class='lg:px-[18rem] px-4 w-full flex flex-col gap-5 mt-3'>
-			<slot />
-    </main>
+  <main class='px-4 w-full max-w-5xl grid grid-cols-1 items-center mx-auto'>
+    <slot />
+  </main>
   </body>
 </html>
 
