--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import AtorposWrapper from '@/components/page/components/atropos-wrapper.astro'
-import DiscordCard from '@/components/page/components/discord.astro'
-import Layout from '../layouts/Layout.astro'
-import { ProfileTab } from '@/components/page/components/profile-tab'
-import Project from '@/components/page/project.astro'
+import AtorposWrapper from '@components/astro/atropos-wrapper.astro'
+import DiscordCard from '@components/astro/discord.astro'
+import Project from '@components/section/project.astro'
+import Layout from '@layouts/Layout.astro'
+import { ProfileTab } from '@components/react'
 ---
 
 <Layout title='ImRLopezAg'>
@@ -14,7 +14,6 @@ import Project from '@/components/page/project.astro'
     <ProfileTab client:idle />
   </aritcle>
   <aritcle id='Projects'>
-    <div />
     <Project />
   </aritcle>
 </Layout>
