feat: Update About, Education, and Experience sections

--- a/src/components/sections/about.astro
+++ b/src/components/sections/about.astro
@@ -6,7 +6,7 @@ const { summary } = basics
 ---
 
 <Section title='About Me'>
-  <p class='text-pretty'>
+  <p class='text-pretty text-black'>
     {summary}
   </p>
 </Section>
