refactor: Update UI card component styling

--- a/src/components/ui/card/card.astro
+++ b/src/components/ui/card/card.astro
@@ -6,6 +6,7 @@ const { className } = Astro.props;
 ---
 
 <div
+  data-title="card-container"
   class:list={[
     'rounded-2xl h-full w-full p-4 overflow-hidden relative z-20 bg-white border border-neutral-100 dark:border-zinc-900 shadow-lg',
     className,
@@ -17,3 +18,9 @@ const { className } = Astro.props;
     </div>
   </div>
 </div>
+
+<style>
+  [data-title="card-container"] {
+    border: 1px solid rgb(24 24 27 / var(--tw-border-opacity));
+  }
+</style>
