refactor: Update placeholder text for search input in keyboard manager component

--- a/src/components/ui/keyboard-manager.astro
+++ b/src/components/ui/keyboard-manager.astro
@@ -83,7 +83,7 @@ const profilesInfo = profiles.map(({ network, url }) => {
 
 <div
   id="hotkeypad"
-  data-placeholder="Buscar comando"
+  data-placeholder="Search for a command"
   data-info={JSON.stringify(profilesInfo)}
 >
 </div>
