--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,6 +32,15 @@ const { image, summary, url } = basics
     <meta name="twitter:title" content={title} />
     <meta name="twitter:description" content={summary} />
     <meta name="twitter:image" content="" />
+
+    <meta name="theme-color" content="#000" />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Angel Gabriel Lopez Solano" />
+    <meta name="keywords" content="Angel Gabriel Lopez Solano, Angel Lopez, Angel Gabriel Lopez, Angel Lopez Solano, Angel Gabriel, Angel, Lopez, Solano, Desarrollador, Developer, Frontend, Frontend Developer, Frontend Engineer, Frontend Engineer, Frontend Developer, Frontend Engineer, Frontend, React, React Developer, React Engineer, React Developer, React Engineer, React, JavaScript, JavaScript Developer, CSS, CSS Developer, HTML, HTML Developer,
+    CSharp, CSharp Developer, CSharp Engineer, CSharp Developer, C#, C# Developer, C# Engineer, C# Developer, .NET, .NET Developer, .NET Engineer, .NET Developer, .NET, .NET Core, .NET Core Developer, .NET Core Engineer, .NET Core Developer, .NET Core, .NET Framework, .NET Framework Developer, .NET Framework Engineer, .NET Framework Developer, .NET Framework, SQL, SQL Developer, SQL Engineer, SQL Developer, SQL, LinkeIn, GitHub, Git, Git Developer" />
+    <meta name="google" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="google-site-verification" content="" />
   </head>
   <body>
     <slot />
