--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import { basics } from '@shared/cv.json';
 const { name } = basics;
 ---
 
-<Layout title={`${name}'s Portfolio`}>
+<Layout title={`IMRLopez | ${name}`}>
   <main class='container mx-auto px-4 py-5 my-5'>
     <Hero />
     <About />
