refactor: Update image size and lazy loading in hero section

--- a/src/components/sections/experience.astro
+++ b/src/components/sections/experience.astro
@@ -15,7 +15,7 @@ import { work } from '@shared/cv.json'
 
           return (
             <li class='ms-3' data-title={name}>
-              <span class='absolute -start-[6.5px] mt-2 h-3 w-3 rounded-full border border-zinc-900 bg-zinc-900' />
+              <span class='absolute -start-[6.5px] mt-2 h-3 w-3 rounded-full border border-zinc-900 bg-zinc-900 no-print' />
               <article>
                 <header class='flex flex-row justify-between items-start mb-1'>
                   <div>
