--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import { basics } from "@shared/cv.json"
+import { basics } from '@shared/cv.json'
 
 interface Props {
   title: string
@@ -11,36 +11,39 @@ const { image, summary, url } = basics
 ---
 
 <!doctype html>
-<html lang="es">
+<html lang='es'>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset='UTF-8' />
     <title>{title}</title>
-    <meta name="description" content={summary} />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="preload" as="image" href={image} />
+    <meta name='description' content={summary} />
+    <meta name='viewport' content='width=device-width' />
+    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+    <link rel='preload' as='image' href={image} />
 
-    <meta property="og:url" content={url} />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content={title} />
-    <meta property="og:description" content={summary} />
-    <meta property="og:image" content="" />
+    <meta property='og:url' content={url} />
+    <meta property='og:type' content='website' />
+    <meta property='og:title' content={title} />
+    <meta property='og:description' content={summary} />
+    <meta property='og:image' content='' />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content={url.split("//")[1] ?? ''} />
-    <meta property="twitter:url" content={url} />
-    <meta name="twitter:title" content={title} />
-    <meta name="twitter:description" content={summary} />
-    <meta name="twitter:image" content="" />
+    <meta name='twitter:card' content='summary_large_image' />
+    <meta property='twitter:domain' content={url.split('//')[1] ?? ''} />
+    <meta property='twitter:url' content={url} />
+    <meta name='twitter:title' content={title} />
+    <meta name='twitter:description' content={summary} />
+    <meta name='twitter:image' content='' />
 
-    <meta name="theme-color" content="#000" />
-    <meta name="robots" content="index, follow" />
-    <meta name="author" content="Angel Gabriel Lopez Solano" />
-    <meta name="keywords" content="Angel Gabriel Lopez Solano, Angel Lopez, Angel Gabriel Lopez, Angel Lopez Solano, Angel Gabriel, Angel, Lopez, Solano, Desarrollador, Developer, Frontend, Frontend Developer, Frontend Engineer, Frontend Engineer, Frontend Developer, Frontend Engineer, Frontend, React, React Developer, React Engineer, React Developer, React Engineer, React, JavaScript, JavaScript Developer, CSS, CSS Developer, HTML, HTML Developer,
-    CSharp, CSharp Developer, CSharp Engineer, CSharp Developer, C#, C# Developer, C# Engineer, C# Developer, .NET, .NET Developer, .NET Engineer, .NET Developer, .NET, .NET Core, .NET Core Developer, .NET Core Engineer, .NET Core Developer, .NET Core, .NET Framework, .NET Framework Developer, .NET Framework Engineer, .NET Framework Developer, .NET Framework, SQL, SQL Developer, SQL Engineer, SQL Developer, SQL, LinkeIn, GitHub, Git, Git Developer" />
-    <meta name="google" content="index, follow" />
-    <meta name="googlebot" content="index, follow" />
-    <meta name="google-site-verification" content="" />
+    <meta name='theme-color' content='#000' />
+    <meta name='robots' content='index, follow' />
+    <meta name='author' content='Angel Gabriel Lopez Solano' />
+    <meta
+      name='keywords'
+      content='Angel Gabriel Lopez Solano, Angel Lopez, Angel Gabriel Lopez, Angel Lopez Solano, Angel Gabriel, Angel, Lopez, Solano, Desarrollador, Developer, Frontend, Frontend Developer, Frontend Engineer, Frontend Engineer, Frontend Developer, Frontend Engineer, Frontend, React, React Developer, React Engineer, React Developer, React Engineer, React, JavaScript, JavaScript Developer, CSS, CSS Developer, HTML, HTML Developer,
+    CSharp, CSharp Developer, CSharp Engineer, CSharp Developer, C#, C# Developer, C# Engineer, C# Developer, .NET, .NET Developer, .NET Engineer, .NET Developer, .NET, .NET Core, .NET Core Developer, .NET Core Engineer, .NET Core Developer, .NET Core, .NET Framework, .NET Framework Developer, .NET Framework Engineer, .NET Framework Developer, .NET Framework, SQL, SQL Developer, SQL Engineer, SQL Developer, SQL, LinkeIn, GitHub, Git, Git Developer'
+    />
+    <meta name='google' content='index, follow' />
+    <meta name='googlebot' content='index, follow' />
+    <meta name='google-site-verification' content='' />
   </head>
   <body>
     <slot />
@@ -53,7 +56,7 @@ const { image, summary, url } = basics
       Menlo,
       Monaco,
       Lucida Console,
-      "Courier New",
+      'Courier New',
       Courier,
       monospace;
     background: #fff;
@@ -85,13 +88,13 @@ const { image, summary, url } = basics
       system-ui,
       -apple-system,
       BlinkMacSystemFont,
-      "Segoe UI",
+      'Segoe UI',
       Roboto,
       Oxygen,
       Ubuntu,
       Cantarell,
-      "Open Sans",
-      "Helvetica Neue",
+      'Open Sans',
+      'Helvetica Neue',
       sans-serif;
   }
 
@@ -125,6 +128,9 @@ const { image, summary, url } = basics
     }
     ol {
       border-left: 0 !important;
+      && li {
+        margin-inline-start: 0 !important;
+      }
     }
   }
 </style>
