--- a/src/components/icons/Mail.astro
+++ b/src/components/icons/Mail.astro
@@ -1,14 +1,1 @@
-<svg
-  xmlns='http://www.w3.org/2000/svg'
-  width='16'
-  height='16'
-  viewBox='0 0 24 24'
-  fill='none'
-  stroke='currentColor'
-  stroke-width='2'
-  stroke-linecap='round'
-  stroke-linejoin='round'
-  class='lucide lucide-mail size-4'
-  ><title>Mail Icon</title><rect width='20' height='16' x='2' y='4' rx='2'
-  ></rect><path d='m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7'></path></svg
->
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="prefix__lucide prefix__lucide-mail prefix__size-4"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="M22 7l-8.97 5.7a1.94 1.94 0 01-2.06 0L2 7"/></svg>
