refactor: Improve hover effect and transition in projects section

--- a/src/components/sections/projects.astro
+++ b/src/components/sections/projects.astro
@@ -20,7 +20,7 @@ import ProjectCard from '@ui/project-card.astro';
                 href={url || github}
                 target='_blank'
                 rel='noopener noreferrer'
-                class='relative group  block p-2 h-full w-full hover:backdrop:bg-zinc-900'
+                class='relative group  block p-2 h-full w-full hover:backdrop-blur-lg hover:backdrop-filter hover:bg-blue-400/40 rounded-2xl transition-all duration-500 ease-in-out transform hover:scale-105'
               >
                 <ProjectCard {...item} />
               </a>
