--- a/src/components/ui/project-card.astro
+++ b/src/components/ui/project-card.astro
@@ -3,16 +3,35 @@ import Card from '@ui/card/card.astro'
 import CardTitle from '@ui/card/card-title.astro'
 import CardContent from '@ui/card/card-content.astro'
 import CardFooter from '@ui/card/card-footer.astro'
+import Github from '@components/icons/GitHub.astro'
+import LinkIcon from '@components/icons/link.astro'
 import { projects } from '@shared/cv.json'
 
 type Project = (typeof projects)[number]
 type Props = Project
 
-const { name, description, highlights } = Astro.props
+const { name, description, highlights, github, url } = Astro.props
 ---
 
-<Card className='hover:bg-none'>
-  <CardTitle>{name}</CardTitle>
+<Card>
+  <CardTitle className='flex items-center gap-2'
+    >
+    {!url && name}
+    {url && (
+      <a href={url} target='_blank' rel='noopener noreferrer' class='hover:underline flex gap-x-1'>
+        <LinkIcon />
+        {name}
+      </a>
+    )}
+    {
+      github && (
+        <a href={github} target='_blank' rel='noopener noreferrer' class='hover:text-blue-900'>
+          <Github />
+          <span class='sr-only'>GitHub</span>
+        </a>
+      )
+    }</CardTitle
+  >
   <CardContent className='py-2'>
     <p class='text-pretty'>
       {description}
