refactor: Add Docker icon to skills section

--- a/src/components/sections/skills.astro
+++ b/src/components/sections/skills.astro
@@ -16,6 +16,7 @@ import GraphQL from '@components/icons/graphql.astro';
 import Dart from '@components/icons/dart.astro';
 import DotNet from '@components/icons/dotnet.astro';
 import CSharp from '@components/icons/c-sharp.astro';
+import Docker from '@components/icons/docker.astro';
 
 import { skills } from '@shared/cv.json';
 ---
@@ -43,6 +44,7 @@ import { skills } from '@shared/cv.json';
               Dart: <Dart />,
               DotNet: <DotNet />,
               CSharp: <CSharp />,
+              Docker: <Docker />
             }[name]
           }
           <span>{name}</span>
