refactor: Update SVG icons to use stroke="currentColor" and add Cypress icon to skills section

--- a/src/components/sections/skills.astro
+++ b/src/components/sections/skills.astro
@@ -17,6 +17,7 @@ import Dart from '@components/icons/dart.astro';
 import DotNet from '@components/icons/dotnet.astro';
 import CSharp from '@components/icons/c-sharp.astro';
 import Docker from '@components/icons/docker.astro';
+import Cypress from '@components/icons/cypress.astro';
 
 import { skills } from '@shared/cv.json';
 ---
@@ -44,7 +45,8 @@ import { skills } from '@shared/cv.json';
               Dart: <Dart />,
               DotNet: <DotNet />,
               CSharp: <CSharp />,
-              Docker: <Docker />
+              Docker: <Docker />,
+              Cypress: <Cypress />
             }[name]
           }
           <span>{name}</span>
